--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
+    "jquery": "^3.6.0",
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
