--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
+    "date-fns": "^2.28.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
