--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-chartjs-2": "^4.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-email-validator": "^1.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
