--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-email-validator": "^1.0.2",
+    "react-rainbow-components": "^1.30.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
