--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "date-fns": "^2.28.0",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
